--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="title_activity_game_launcher">GameLauncherActivity</string>
+    <string name="title_activity_select_device_to_connect">SelectDeviceToConnectActivity</string>
 
 </resources>
